--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <h1>Workout Plan</h1>
+    <div class="buttons">
     <a href="sixDays.html"><div class="one">one part a day(chest,back,shoulders,triceps,biceps,squats)</div></a>
-    <div class="two"><a href="threeDays.html">Two part a day(chest and triceps, Back and Biceps, Shoulders and Squats)</a></div>
-    
+    <a href="threeDays.html"><div class="two">Two part a day(chest and triceps, Back and Biceps, Shoulders and Squats)</div></a>
+    </div>
+    dsfafds
 
 </body>
 </html>
