--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <h1>Workout Plan</h1>
     <div class="buttons">
-    <a href="sixDays.html"><div class="one">one part a day(chest,back,shoulders,triceps,biceps,squats)</div></a>
-    <a href="threeDays.html"><div class="two">Two part a day(chest and triceps, Back and Biceps, Shoulders and Squats)</div></a>
+    <a href="sixDays.html"><div class="one"><span style="font-size: 15px;">one part a day </span><br>(chest,back,shoulders,triceps,biceps,squats)</div></a>
+    <a href="threeDays.html"><div class="two"><span style="font-size: 15px;">Two part a day</span> <br>(chest and triceps, Back and Biceps, Shoulders and Squats)</div></a>
     </div>
     dsfafds
 
