--- a/back.html
+++ b/back.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <p>UNDER DEVELOPMENT EXPECTED SOON !</p>
+    <h1>Back Workout</h1>
+    <img src="pulldown.gif" alt="">
+    <img src="backrow.gif" alt="">
+    <img src="Dumbbell-Row.gif" alt="">
 </body>
 </html>
