--- a/back.html
+++ b/back.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    
 </head>
 <body>
     <h1>Back Workout</h1>
     <img src="pulldown.gif" alt="">
+    <p>pulldown</p>
     <img src="backrow.gif" alt="">
+    <p>seated row</p>
     <img src="Dumbbell-Row.gif" alt="">
+    <p>Dumbbell-Row</p>
 </body>
 </html>
