--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <h1>Workout Plan</h1>
     <div class="buttons">
-    <a href="one.html"><div class="one"><span style="font-size: 25px;">One Part A Day </span><br>(chest,back,shoulders,<br>triceps,biceps,squats)</div></a>
-    <a href="two.html"><div class="two"><span style="font-size: 25px;">Two part a day</span> <br>(chest and triceps, Back and Biceps,<br> Shoulders and Squats)</div></a>
+    <a href="one.html"><div class="one"><span style="font-size: 25px;"><h2>One Part A Day </h2></span><br>(chest,back,shoulders,<br>triceps,biceps,squats)</div></a>
+    <a href="two.html"><div class="two"><span style="font-size: 25px;"><h2>Two part a day</h2>  </span> <br>(chest and triceps, Back and Biceps,<br> Shoulders and Squats)</div></a>
 
     </div>
     
