--- a/one.html
+++ b/one.html
@@ -9,10 +9,10 @@
 <body>
     <a href="chest.html"><h1>CHEST </h1></a>
     <a href="back.html"><h1>BACK</h1></a>
-    <a href="shoulders"><H1>SHOULDERS</H1></a>
+    <a href="shoulders.html"><H1>SHOULDERS</H1></a>
     <a href="triceps.html"><h1>TRICEPS</h1></a>
     <a href="biceps.html"><h1>BICEPS</h1></a>
-    <a href="legs"><H1>LEGS</H1></a>
+    <a href="legs.html"><H1>LEGS</H1></a>
     <P>ITS RECOMMENDED TO FOLLOW FROM "MONDAY TO SATURDAY"</P>
     
 </body>
