--- a/shoulders.html
+++ b/shoulders.html
@@ -4,8 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <h1>Shoulders</h1>
+    <img src="5dumbbell-shoulders-press.gif" alt="">
+    <p>Dumbell Press</p>
+    <img src="Dumbbell-Lateral-Raise.gif" alt="">
+    <p>Lateral raises</p>
+    <img src="DB_REAR_LAT_RAISE.gif" alt="">
+    <p>Rear delt raises</p>
+    <img src="Barbell-Shrug.gif" alt="">
+    <p>Shrugs</p>
+    <img src="uprightrow.gif" alt="">
+    <p>Up Right Row</p>
 </body>
 </html>
