--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
     <div class="buttons">
     <a href="one.html"><div class="one"><span style="font-size: 25px;"><h2>One Part A Day </h2></span><br>(chest,back,shoulders,<br>triceps,biceps,squats)</div></a>
     <a href="two.html"><div class="two"><span style="font-size: 25px;"><h2>Two part a day</h2>  </span> <br>(chest and triceps, Back and Biceps,<br> Shoulders and Squats)</div></a>
-
     </div>
+    <p style="font-size: 30px;position: relative;top: 80px;"> 3 sets, 10-12 Reps</p>
+
     
 
 </body>
