--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
     <a href="two.html"><div class="two"><span style="font-size: 25px;"><h2>Two part a day</h2>  </span> <br>(chest and triceps, Back and Biceps,<br> Shoulders and Squats)</div></a>
     </div>
     <p style="font-size: 30px;position: relative;top: 120px;"> 3 sets, 10-12 Reps</p>
-
+    <footer>
+        <p style="text-align: center; position: relative;top: 200px;">Contact</p> 
+        <a href=""><img src="il_fullxfull.3651836207_pag1.webp" alt="" style="border-radius: 25px; height: 30px; width: 30px;position: relative;top: 220px; display: block;margin-left: auto;margin-right: auto;width: 10%; height: 10%;"></a>
+    </footer>
     
 
 </body>
